# csops

./: .gitignore  CHANGELOG.md  README.md  cliff.toml  duties.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
csops/: __init__.py  _version.py  run.py
